# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/x64-common.gni")

# BoardInformation for Product Assembly
board_information_for_assembly = "//boards/x64/board_information.json5"

board_name = "x64"
board_description = "A generic x64 device"

blobfs_capacity = 10485760000  # 10000 MiB
max_blob_contents_size =
    5216665600  # 4975 MiB. Leaves 50 MiB for the update package.

_bootfs_deps = [
  # Drivers
  "//src/connectivity/ethernet/drivers/gvnic",
  "//src/connectivity/ethernet/drivers/realtek-8111",
  "//src/devices/serial/drivers/uart16550",
  "//src/graphics/display/drivers/simple:simple.amd-kaveri",
  "//src/graphics/display/drivers/simple:simple.nv",

  # Use legacy serial for bootfs.
  "//boards/kernel_cmdline:serial-legacy",

  # Driver to handle oneshot reboot flags for bootloader
  "//src/devices/block/drivers/abr-shim",
]

board_bootfs_labels += _bootfs_deps
board_recovery_bootfs_labels += _bootfs_deps
board_zedboot_bootfs_labels += _bootfs_deps

board_provided_drivers += [
  {
    package_target =
        "//src/connectivity/wlan/drivers/third_party/intel/iwlwifi:iwlwifi"
    driver_components = [ "meta/iwlwifi.cm" ]
  },
]

# Some users leave a USB key (containing zedboot) plugged into their
# device at all times. To avoid unintentionally breaking remote workflows,
# we permit multiple GPT devices.
board_fshost_config.gpt_all = true
board_zedboot_fshost_config.gpt_all = true

use_vbmeta = true
build_uefi_disk = true
use_gigaboot = true
avb_key =
    "//third_party/android/platform/external/avb/test/data/testkey_atx_psk.pem"
avb_atx_metadata =
    "//third_party/android/platform/external/avb/test/data/atx_metadata.bin"

assembly_generate_fvm_fastboot = true

zircon_a_partition = "zircon-a"
zircon_b_partition = "zircon-b"
zircon_r_partition = "zircon-r"
vbmeta_a_partition = "vbmeta_a"
vbmeta_b_partition = "vbmeta_b"
vbmeta_r_partition = "vbmeta_r"
fvm_partition = "fvm"
active_partition = "a"
fastboot_product = "gigaboot"

# Supports both physical and virtual devices.
board_is_emu = true

partitions_config_label = "//boards/partitions:x64"
partitions_config_contents += [ "$root_build_dir/fuchsia.esp.blk" ]

bazel_product_bundle_board = "x64"
