# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/x64-common.gni")

# Board configuration for Product Assembly
board_configuration_label = "//boards/x64"

board_name = "x64"
board_description = "A generic x64 device"

_bootfs_deps = [
  # Drivers
  "//src/connectivity/ethernet/drivers/gvnic",
  "//src/connectivity/ethernet/drivers/realtek-8111",
  "//src/devices/serial/drivers/uart16550",
  "//src/graphics/display/drivers/simple:simple.amd-kaveri",
  "//src/graphics/display/drivers/simple:simple.nv",

  # Use legacy serial for bootfs.
  "//boards/kernel_cmdline:serial-legacy",

  # Driver to handle oneshot reboot flags for bootloader
  "//src/devices/block/drivers/abr-shim",
]

board_bootfs_labels += _bootfs_deps
board_recovery_bootfs_labels += _bootfs_deps
board_zedboot_bootfs_labels += _bootfs_deps

board_provided_drivers += [
  {
    package_target =
        "//src/connectivity/wlan/drivers/third_party/intel/iwlwifi:iwlwifi"
    driver_components = [ "meta/iwlwifi.cm" ]
  },
]

# Supports both physical and virtual devices.
board_is_emu = true

bazel_product_bundle_board = "x64"
