# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("common/x64-common.gni")

# Board configuration for Product Assembly
board_configuration_label = "//boards/x64"

board_name = "x64"
board_description = "A generic x64 device"

_bootfs_deps = [
  # Use legacy serial for bootfs.
  "//boards/kernel_cmdline:serial-legacy",
]

board_bootfs_labels += _bootfs_deps
board_recovery_bootfs_labels += _bootfs_deps
board_zedboot_bootfs_labels += _bootfs_deps

# Supports both physical and virtual devices.
board_is_emu = true

bazel_product_bundle_board = "x64"
