# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("examples") {
  testonly = true
  deps = [
    ":tests",
    "components",
    "cowsay",
    "cpp",
    "diagnostics",
    "drivers",
    "fidl",
    "fuzzers",
    "hello_world",
    "intl",
    "rust",
    "time",
  ]

  # TODO(fxbug.dev/129093): Remove once the bug is fixed.
  if (current_cpu == "riscv64") {
    deps -= [ "fuzzers" ]
  }
}

group("tests") {
  testonly = true
  data_deps = [
    "components:tests",
    "cpp:tests",
    "diagnostics:tests",
    "drivers:tests",
    "fidl:tests",
    "fuzzers:tests",
    "hello_world:tests",
    "intl:tests",
    "rust:tests",
    "testing:tests",
  ]

  # TODO(fxbug.dev/129093): Remove once the bug is fixed.
  if (current_cpu == "riscv64") {
    data_deps -= [ "fuzzers:tests" ]
  }
}
