# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//products/common/bringup.gni")

product_bootfs_labels +=
    [ "//products/kernel_cmdline:kernel.oom.behavior--jobkill" ]

product_bootfs_labels += [ "//bundles:diagnostics-eng" ]
