# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//products/common/bringup.gni")

product_bootfs_labels += [
  "//products/kernel_cmdline:kernel.oom.behavior--jobkill",
  "//products/kernel_cmdline:oom.reboot-timeout--low",
  "//bundles/drivers:usb-peripheral-stack",
  "//src/sys/component_manager:component_manager_bootfs_config",
]

product_bootfs_labels += [ "//src/diagnostics/iquery" ]
