# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//products/core.gni")
fuchsia_filesystem_config = "//boards/images:default-fxfs"
fuchsia_product_assembly_config_label = "//products/core:core_with_fxfs"
