# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//products/core.gni")
fuchsia_product_assembly_config_label = "//products/core:core_with_minfs"
zedboot_product_assembly_config_label = "//products/zedboot:zedboot_with_minfs"
data_filesystem_format = "minfs"
