# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

include_shell_commands_package = true

product_bootfs_labels = []
legacy_base_package_labels = []

legacy_base_package_labels +=
    [ "//src/connectivity/policy/netcfg:config-default" ]

discoverable_package_labels = [ "//bundles/tools" ]

# Use the product assembly config target to specify the product configuration.
#
# NOTE: This should be overridden by products which inherit from core.
fuchsia_product_assembly_config_label = "//products/core:core_with_netstack3"
zedboot_product_assembly_config_label = "//products/zedboot"
