# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#
# This `minimal` product is intended to be the "smallest thing we'd still call Fuchsia," which
# implies simplicity, security, updatability and performance. Importantly, that differs from "all
# current products use this feature;" today, that is what the `core` product is for.
# `minimal` will change over time, both by addition and subtraction -- for example, should the
# team ship a mechanism for updating Fuchsia that does not require IP networking, that functionality
# should be moved to a higher-level product definition.

import("//products/common/minimal.gni")

# Kernel command line arguments.
product_bootfs_labels += [
  "//products/kernel_cmdline:oom.reboot-timeout--low",
  "//src/sys/component_manager:component_manager_bootfs_config",
]

legacy_base_package_labels += [ "//src/developer/memory/buckets" ]

# Use the product assembly config target to specify the product configuration.
#
# This should be overridden by products which inherit from minimal.
fuchsia_product_assembly_config_label = "//products/minimal"
zedboot_product_assembly_config_label = "//products/zedboot"

fuchsia_structured_config_policy =
    "//products/minimal/minimal_user_structured_config_policy.json5"

use_bazel_images_only = true
bazel_product_bundle_prefix = "//products/minimal:product_bundle"
extra_bazel_assembly_targets =
    [ "//build/bazel/assembly/assembly_outputs:verifications" ]

assembly_fshost = true

# Packages to be published to universe that do not go through assembly.
discoverable_package_labels += [ "//src/developer/debug/debug_agent" ]
