# Copyright 2022 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#
# This `minimal` product is intended to be the "smallest thing we'd still call Fuchsia," which
# implies simplicity, security, updatability and performance. Importantly, that differs from "all
# current products use this feature;" today, that is what the `core` product is for.
# `minimal` will change over time, both by addition and subtraction -- for example, should the
# team ship a mechanism for updating Fuchsia that does not require IP networking, that functionality
# should be moved to a higher-level product definition.

include_shell_commands_package = true

# Kernel command line arguments.
product_bootfs_labels = [ "//products/kernel_cmdline:oom.reboot-timeout--low" ]

# Use the product assembly config target to specify the product configuration.
#
# This should be overridden by products which inherit from minimal.
fuchsia_product_assembly_config_label = "//products/minimal"
zedboot_product_assembly_config_label = "//products/zedboot:zedboot_with_fvm"

bazel_product_bundle_prefix = "//products/minimal:product_bundle"
extra_bazel_assembly_targets =
    [ "//build/bazel/assembly/assembly_outputs:verifications" ]

# Packages to be published to universe that do not go through assembly.
discoverable_package_labels = [ "//src/developer/debug/debug_agent" ]

# List all artifacts to upload to CIPD.
cipd_assembly_artifact_targets = [
  "//build/images:main_assembly",
  "//products/minimal:board_assembly_artifacts",
]

fxfs_blob = false
