# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//products/common/core.gni")

assembly_fshost = true

product_bootfs_labels +=
    [ "//src/sys/component_manager:component_manager_bootfs_config" ]

legacy_base_package_labels +=
    [ "//src/connectivity/network/netcfg:config-default" ]

# Add build type config data
legacy_base_package_labels += [ "//src/cobalt/bin/app:build_type_eng" ]

# Add UI packages on terminal.
legacy_cache_package_labels += [
  "//src/fonts/collections:small-open-fonts-collection",
  "//src/ui/bin/terminal",
  "//src/ui/bin/tiles-session",

  # Used to mock out display hardware in UI integration tests.
  "//src/graphics/display/testing/fake-coordinator-connector",
]

# Used by Chromium tests, such as //src/chromium:tests.
# Although deps in the individual tests ensures these are available in Fuchsia
# infrastructure, Chromium infrastructure runs such tests run on this image,
# so they must be explicitly included in cached packages.
# TODO(crbug.com/1408597): Remove once the Chromium tests package the fake.
legacy_cache_package_labels += [ "//src/chromium:chromium_test_base_deps" ]

# Add SDK tools set to "cache" so these tools are automatically available in
# QEMU images generated for the SDK, but in cache, so they can be updated.
legacy_cache_package_labels += [ "//sdk/bundles:tools" ]

# These were previously included in "//sdk/bundles:tools".
# TODO(fxbug.dev/119075): Remove these.
legacy_cache_package_labels += [ "//src/chromium:web_engine" ]

core_realm_shards += [
  "//src/media/codec:codec_factory_shard",
  "//src/media/audio/audio_core:core_shard",
]

# Add cfv2 sl4f to base.
core_realm_shards += [ "//src/testing/sl4f:sl4f_terminal_core_shard" ]
legacy_base_package_labels += [ "//src/sys/bin/start_sl4f" ]

# Add Test UI Stack for use in tests.
# TODO(fxbug.dev/105105): Remove once we migrate client usage to subpackages.
legacy_cache_package_labels +=
    [ "//src/ui/testing/test_ui_stack:test-ui-stack-flavors" ]

# Add validator package for use in tests.
# TODO(fxbug.dev/127138): Remove once we support packages in the SDK.
legacy_cache_package_labels +=
    [ "//src/diagnostics/validator/inspect:validator" ]

# Add test validation packages for use in tests.
# TODO(fxbug.dev/127138): Remove once we support packages in the SDK and we want to put this
# in the SDK.
legacy_cache_package_labels += [
  "//src/tests/fidl/dynsuite/client_suite/harness",
  "//src/tests/fidl/compatibility:packages",
  "//src/tests/fidl/dynsuite/server_suite/harness",
]

# Use the product assembly config target to specify the product configuration.
fuchsia_product_assembly_config_label = "//products/terminal"
zedboot_product_assembly_config_label = "//products/zedboot"

fuchsia_structured_config_policy =
    "//products/terminal/terminal_user_structured_config_policy.json5"

# Include the session framework
core_realm_shards += [ "//src/session/bin/session_manager:terminal_core_shard" ]
